# SOS

./: README.md
00000000/: MainWidget.cpp  MainWidget.h
00000000/resources/: style.qss
24864092/: CMakeLists.txt  NetworkAnalyzer.cpp  NetworkAnalyzer.h  main.cpp
25989448/issue/: CMakeLists.txt  CmakeLists.txt  mainwindow.ui
25989448/original/: CmakeLists.txt
25989448/suggested/: CMakeLists.txt
31786449/: CMakeLists.txt  MainWidget.h  QuickWidget.cpp
31786449/resources/: style.qss  widget.qml
35162425/: CMakeLists.txt
Share QSS style with QWidget and QtQuick controls/: MainWidget.cpp  QtWidget.cpp  QtWidget.h  QuickWidget.cpp  QuickWidget.h  main.cpp
Share QSS style with QWidget and QtQuick controls/resources/: resources.qrc  widget.qml
